--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swami.vidyanand"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission
+        android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Splash" >
+            android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +33,7 @@
         </activity>
         <activity
             android:name=".activities.IndexActivity"
-            android:label="@string/title_activity_index" >
+            android:label="@string/title_activity_index">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
@@ -33,7 +42,7 @@
             android:name=".activities.SliderImageActivity"
             android:label="@string/title_activity_slider"
             android:parentActivityName=".activities.IndexActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swami.vidyanand.activities.IndexActivity" />
@@ -42,7 +51,7 @@
             android:name=".activities.ShortItemDescriptionActivity"
             android:label="@string/title_activity_short_item_description"
             android:parentActivityName=".activities.IndexActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swami.vidyanand.activities.IndexActivity" />
@@ -51,7 +60,7 @@
             android:name=".activities.SliderTextActivity"
             android:label="@string/title_activity_sliter_text_fragment"
             android:parentActivityName=".activities.IndexActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.swami.vidyanand.activities.IndexActivity" />
@@ -87,6 +96,9 @@
         </receiver>
 
         <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
+        <service
+            android:name=".gcm.GcmIntentService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
