--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.swami.vidyanand"
-    android:versionCode="1"
-    android:versionName="1.0">
+    android:versionCode="6"
+    android:versionName="1.23">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,12 +11,13 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
-        android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:name="com.swami.vidyanand.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.swami.vidyanand.permission.C2D_MESSAGE" />
 
     <application
+        android:name=".SwamiVidyanandApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -98,7 +99,27 @@
         <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
         <service
             android:name=".gcm.GcmIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <receiver
+            android:name=".gcm.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
+                <category android:name="com.swami.vidyanand.gcm" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".activities.DailySuvicharActivity"
+            android:label="@string/title_activity_daily_suvichar"
+            android:parentActivityName=".activities.IndexActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.swami.vidyanand.activities.IndexActivity" />
+        </activity>
     </application>
 
 </manifest>
